# zero2prod-rust

./: .dockerignore  .env  Cargo.toml  Makefile  README.md  configuration.example.yaml  configuration.yaml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml
deployments/: Dockerfile
migrations/: 20240404222119_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
