[package]
name = "zero2prod"
version = "0.1.0"
authors = ["crazyoptimist <hey@crazyoptimist.net>"]
edition = "2021"

# We can use any path, but below is the community convention
# We can give any name to the lib, but it will default to package.name if missing
[lib]
path = "src/lib.rs"

# We can have only one library in a project, and multiple binaries. That's why below is an array
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
config = { version = "0.14.0", features = ["yaml"] }

# Using toml table syntax allows us to avoid super long lines
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12.2"
